Fix menu page layout issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -107,10 +107,6 @@ a:hover {
   border-right: 1px solid rgba(225, 225, 225, 0.2);
 }
 
-.menu-content div {
-  border: 1px solid black;
-}
-
 .selected-tab {
   background-color: lightyellow;
 }
@@ -175,6 +171,28 @@ footer {
   gap: 10px;
 }
 
+.menu-content div {
+  margin: auto;
+  border: 1px solid black;
+  padding: 10px;
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  border: 1px solid black;
+}
+
+.menu-content {
+  font-size: 1.2em;
+}
+
+.menu-content h2 {
+  margin-top: 40px;
+}
+
+.menu-content h3 {
+  font-size: 1.3em;
+}
 
 /* MOBILE STYLES */
 @media only screen and (max-width: 480px) {
@@ -194,6 +212,10 @@ footer {
   .about, .hours {
     width: 300px;
   }
+
+  .menu-content, div {
+    width: 300px;
+  }
 }
 
 /* TABLET STYLES */
@@ -207,6 +229,10 @@ footer {
   }
 
   .about, .hours {
+    width: 481px;
+  }
+
+  .menu-content, div {
     width: 481px;
   }
 }
@@ -227,6 +253,10 @@ footer {
   }
 
   .about, .hours {
+    width: 481px;
+  }
+
+  .menu-content, div {
     width: 481px;
   }
 }
